# saltmarch

./: .gitignore  ARCHITECTURE_ELI5.md  BUILD.md  CLAUDE.md  CMakeLists.txt  MMO_PLAN.md  README.md  UI_PLAN.md
.github/workflows/: ci.yml
ci/: smoke-test.sh
scripts/: feedsync.sh  npc_skipper.sh
src/: agent.c  agent.h  build_confirm_ui.c  build_confirm_ui.h  building.c  building.h  camera.c  camera.h  command.c  command.h  connectivity.c  connectivity.h  demolish_confirm_ui.c  demolish_confirm_ui.h  escrow_ui.c  escrow_ui.h  faction.c  faction.h  feed.c  feed.h  fonts.c  fonts.h  game.c  game.h  input.c  input.h  island.c  island.h  main.c  map.c  map.h  net.c  net.h  population.c  population.h  render.c  render.h  resource.c  resource.h  ship.c  (+12 more)
tests/: run.sh  test_command_funnel.c  test_defs.c  test_determinism.c  test_faction.c  test_feed.c  test_lockstep.c  test_ownership.c  test_save_replay.c  test_voyage.c
